<resources>
    <string name="app_name">Knowledge</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="image_student">Imagem de um estudante</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="new_user">Novo por aqui?</string>
    <string name="create_account">Criar conta</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="signup">Cadastrar</string>
    <string name="text_forgot_password">Para redefinir sua senha, informe o usuário ou email cadastrado na sua conta e lhe enviaremos um link com as instruções.</string>
    <string name="enviar_e_mail">Enviar e-mail</string>
    <string name="usuario_email">Usuário ou E-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="config">Configuração</string>
    <string name="add_image">Adicionar imagem</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="edit_profile_site">Site</string>
    <string name="edi_profile_usuario">Usuario</string>
    <string name="edit_profile_nome">Nome</string>
    <string name="edit_profile_salvar">Salvar</string>
    <string name="logout">Sair</string>
    <string name="lorem_Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at orci egestas, tincidunt ante ut, porttitor leo. Etiam eget nisl at sem vulputate consectetur hendrerit vel mi. Etiam eget odio urna. Sed in aliquet ex. Ut varius consequat purus, et porttitor lectus bibendum in. Etiam condimentum a nisi vitae feugiat. Duis vel placerat sem, quis pulvinar lacus. Nam ipsum lacus, ultrices at lacinia id, aliquam sed tortor. In imperdiet hendrerit dolor a scelerisque. Vivamus finibus nunc sit amet urna suscipit sollicitudin. In faucibus iaculis sapien nec volutpat. Vivamus sit amet volutpat libero. Curabitur eget felis non lectus placerat pretium. Sed ac enim sollicitudin, sagittis est in, fermentum nisi. Mauris vel diam ac elit tempus venenatis. Quisque consequat ultrices neque in porttitor. Curabitur hendrerit lorem id molestie ornare. Ut vehicula eros fringilla congue pulvinar. Aliquam euismod felis non tellus dapibus dictum. Duis non luctus nunc, a pretium magna. Ut finibus risus vitae justo ultricies, in viverra enim malesuada. Morbi suscipit accumsan quam sed fermentum. Morbi dictum mauris in arcu luctus, quis volutpat quam euismod. Vivamus mattis quam ac dui imperdiet, semper tristique erat dapibus. Donec sollicitudin, neque non vehicula consequat, lorem massa dictum est, tempus molestie leo odio a ipsum. Mauris tellus sem, scelerisque fermentum massa eget, pharetra lacinia sem. Duis accumsan viverra libero at blandit. Aliquam non lacus libero. Maecenas vehicula rhoncus dictum. Curabitur ex sem, suscipit sed consectetur ac, dapibus vitae nisl. Nam ac facilisis nunc, vitae consequat lorem. Ut et neque sollicitudin, ultricies orci in, vehicula magna. Proin ut lobortis erat. Nullam varius metus ut ante dapibus cursus. Nunc consectetur at metus non placerat. Aenean auctor tincidunt lectus, eu vehicula nunc fermentum et. Morbi vel imperdiet orci. Suspendisse rutrum scelerisque nunc, sit amet dapibus sapien vestibulum at. Donec luctus et lorem in hendrerit. Sed at maximus massa. Nam interdum turpis nisl, nec cursus elit suscipit non. Duis finibus dolor nibh, quis gravida sapien placerat vestibulum. Nunc volutpat ex quis ligula placerat condimentum tristique ultrices augue. Vivamus et erat a nunc lacinia pellentesque. Ut faucibus fermentum sagittis. Quisque efficitur elit magna.</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="search">Pesquisar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="alterar_foto_do_perfil">Alterar foto do perfil</string>
    <string name="title">Titulo</string>
    <string name="change_banner">Alterar banner</string>
    <string name="publish">Publicar</string>
</resources>