<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_login"
        android:layout_marginHorizontal="5dp"
        app:cardCornerRadius="10dp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_knowledge"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:layout_margin="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="40dp"
                android:textColor="@color/yellow_low"
                android:fontFamily="@font/kleeone_semibold"
                app:layout_constraintBottom_toTopOf="@id/iv_learning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/iv_learning"
                android:src="@drawable/ic_learning"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:contentDescription="@string/image_student" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_user"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cp_forgot_password"
                    android:clickable="false"
                    android:backgroundTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="8dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_new_user"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/new_user"/>

    <TextView
        android:id="@+id/tv_create_accounter"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>