<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreateAccounterActivity">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/iv_create_accounter"
        android:src="@drawable/ic_learning_3"
        android:layout_height="250dp"
        android:layout_width="350dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_create_account"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:id="@+id/til_password_create_accounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_comfirmPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginHorizontal="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_accounter"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_comfirmPassword"
        />

</LinearLayout>