<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        app:layout_constraintGuide_begin="30dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="10dp"
        android:id="@+id/card_forgot_password"
        android:translationZ="6dp"
        android:elevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/tv_knowledge"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textSize="50dp"
                android:textColor="@color/yellow_low"
                android:fontFamily="@font/kleeone_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="8dp"
                android:textAlignment="inherit"
                android:layout_marginVertical="20dp"
                android:text="@string/text_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/usuario_email"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:text="@string/enviar_e_mail"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>