<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreateAccountActivity">



    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="10dp"
        android:id="@+id/card_forgot_password"
        android:translationY="6dp"
        android:translationZ="6dp"
        android:elevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_knowledge"
                android:layout_gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/app_name"
                android:layout_margin="5dp"
                android:textSize="40dp"
                android:textColor="@color/yellow_low"
                android:fontFamily="@font/kleeone_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="Nome de usuário"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name_user"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:layout_marginHorizontal="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_confirmPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_accounter"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>