<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileActivity">

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/guide_start"
        app:layout_constraintGuide_begin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/guide_end"
        app:layout_constraintGuide_end="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Toolbar
        android:id="@+id/tb_edit_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/yellow"
        android:title="Editar perfil"
        android:titleTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_edit_profile"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tb_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="2dp"
        app:cardCornerRadius="75dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_profile_avatar" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_alterar_perfil"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_edit_profile"
        android:text="Alterar foto do perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_profile_nome"
        app:layout_constraintTop_toBottomOf="@id/tv_alterar_perfil"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_name"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        android:layout_marginTop="16dp"
        android:hint="@string/edi_profile_usuario"
        app:layout_constraintTop_toBottomOf="@id/til_name"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_user"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_site"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_user"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:hint="@string/edit_profile_site"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_site"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_salvar"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:text="@string/edit_profile_salvar"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>